# Papers-From-Scratch

./: .gitignore  LICENSE  README.md  pyproject.toml  test_new_paper.py
dqn/: PAPER.md  conftest.py  pyproject.toml
dqn/Code/: dqn.py  dqn_gym_env.ipynb
dqn/Outputs/: dqn_cartpole.pth
scripts/: new-paper.sh
vision-transformer/: PAPER.md  RESULTS.md  pyproject.toml  test_vit.py  vit.py
vision-transformer/Code/: VIT.ipynb  cnn.py  vit.py
vision-transformer/Outputs/: cnn_model.pth
vision-transformer/Tests/: test_vit.py
