[project]
name = "papers-from-scratch"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "ipykernel>=7.3.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "tensorflow>=2.21.0",
    "torchvision>=0.27.1",
]

[tool.uv.workspace]
members = ["*"]
exclude = ["graphify-out", "scripts", "Datasets"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
tdd_guard_project_root = "/Users/ahad/Library/Projects/Papers-From-Scratch"

[dependency-groups]
dev = [
    "tdd-guard-pytest>=0.1.2",
]
